--- a/beckend/package.json
+++ b/beckend/package.json
@@ -10,5 +10,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "twilio": "^5.3.0"
+  }
 }
