--- a/beckend/package.json
+++ b/beckend/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "twilio": "^5.3.0"
+    "qrcode-terminal": "^0.12.0",
+    "twilio": "^5.3.0",
+    "whatsapp-web.js": "^1.25.0"
   }
 }
